fixed "native scrollbars are not showing in layouts" issue partly (fullwidth, tabbed, blank, left sidenav alt., right sidenav alt.) .. still needs work for left and right sidenav and carded stuff

--- a/src/app/core/global-scss/partials/layouts.scss
+++ b/src/app/core/global-scss/partials/layouts.scss
@@ -1,10 +1,8 @@
 /*----------------------------------------------------------------*/
 /*  Layouts
 /*----------------------------------------------------------------*/
-
 .page-layout {
     position: relative;
-    overflow: hidden !important;
 
     .top-bg {
         position: absolute;
@@ -243,6 +241,7 @@
 
         // Fullwidth
         &.fullwidth {
+            min-height: 100%;
 
             .header {
                 height: 200px;
@@ -319,6 +318,7 @@
             }
 
             .center {
+                overflow: auto;
                 z-index: 3;
                 box-shadow: $whiteframe-shadow-z3;
 
@@ -333,7 +333,6 @@
 
                 .content {
                     padding: 24px;
-                    background: $material-color-white;
                 }
             }
         }
@@ -381,6 +380,7 @@
             height: 100%;
 
             .center {
+                overflow: auto;
                 z-index: 3;
                 box-shadow: $whiteframe-shadow-z3;
 
@@ -395,7 +395,6 @@
 
                 .content {
                     padding: 24px;
-                    background: $material-color-white;
                 }
             }
 
@@ -420,6 +419,7 @@
 
         // Tabbed
         &.tabbed {
+            min-height: 100%;
 
             .header {
                 height: 200px;
@@ -473,6 +473,7 @@
 
     // Blank layout
     &.blank {
+        min-height: 100%;
         padding: 24px;
     }
 }
